# fancontroller

./: CMakeLists.txt
include/: display.h  fancontroller.h  fanmonitor.h  speedsource.h  utils.h
src/: display.cpp  fancontroller.cpp  fanmonitor.cpp  main.cpp  speedsource.cpp
